--- a/blog/src/app/components/login/login.component.html
+++ b/blog/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div
-  class="bg-slate-800 w-1/5 text-white h-1/2 rounded-md"
+  class="bg-black w-1/5 text-white h-1/2 rounded-md"
   style="
     text-align: center;
     position: absolute;
@@ -9,14 +9,14 @@
   "
 >
   <p class="text-3xl mt-4 font-semibold">Login</p>
-  <form style="text-align:left" class="m-4 text-xl">
+  <form (ngSubmit)="loginSubmit(loginForm)" #loginForm="ngForm" style="text-align:left" class="m-4 text-xl">
 
     <label >Name</label>
     <div>
-    <input class="m-3 p-1 rounded-md bg-slate-400" type="text"/></div>
+    <input class="m-3 p-1 rounded-md bg-slate-400" name="username" required type="text" ngModel/></div>
     <label>Password</label>
     <div>
-    <input class="m-3 p-1 rounded-md bg-slate-400" type="password"/>
+    <input class="m-3 p-1 rounded-md bg-slate-400" name="password" required type="password" ngModel/>
   </div>
   <div>
   <button class="bg-green-500 w-1/4 rounded-lg p-2 ml-24 mt-4" type="submit">Enter</button>
@@ -33,3 +33,14 @@
     transform: translate(-50%, -50%);
   "
 >Dont have an Account? Sign Up <a href="/signUp">Here</a></div>
+<div
+  class="font-semibold  text-red-700  rounded-md"
+  style="
+    text-align: center;
+    position: absolute;
+    top: 79%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  "
+  *ngIf="!loginError.length"
+>{{loginError}}</div>
