Added redirect when missing token

--- a/blog/src/app/components/login/login.component.html
+++ b/blog/src/app/components/login/login.component.html
@@ -42,5 +42,5 @@
     left: 50%;
     transform: translate(-50%, -50%);
   "
-  *ngIf="!loginError.length"
+  *ngIf="loginError.length"
 >{{loginError}}</div>
