Added blogs display

--- a/blog/src/app/components/blogs/blogs.component.html
+++ b/blog/src/app/components/blogs/blogs.component.html
@@ -1,8 +1,9 @@
 <div class="w-3/4 mx-36 p-4 rounded-lg bg-slate-500 mt-4">
   <div class="flex items-start">
 <img src="assets/images/logo (2).png" class="w-8 h-8  rounded-full"/>
-<p class="ml-2">Lorem Ipsum</p>
+<p class="ml-2">{{title}} by {{author}} at {{created}}</p>
   </div>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras quis pharetra nulla. Phasellus malesuada, urna in ultricies rhoncus, libero justo dignissim felis, quis commodo neque dolor sed ipsum. Mauris congue, ipsum vitae venenatis hendrerit, nibh mauris faucibus odio, vitae semper erat purus quis ex. Quisque lobortis eu nunc at aliquam. Fusce vitae ullamcorper enim, vitae pulvinar purus. Nam ut laoreet sapien. In sapien turpis, euismod eget ligula quis, blandit pretium est. Ut sed semper mi. Maecenas eget libero lacinia, sagittis mi ac, fermentum velit. Mauris dui dolor, mattis non dictum in, sagittis vitae lacus. Nullam tempus, justo nec lobortis congue, libero ex ultrices dolor, quis posuere ante est eget ex.</p>
+  <p>{{body}}
+  </p>
   <img src="assets/images/like.png" class="h-4 w-4 mt-4"/><h6>5</h6>
 </div>
