--- a/blog/src/app/components/blogs/blogs.component.html
+++ b/blog/src/app/components/blogs/blogs.component.html
@@ -1,9 +1,11 @@
-<div class="w-3/4 mx-36 p-4 rounded-lg bg-slate-500 mt-4">
-  <div class="flex items-start">
-<img src="assets/images/logo (2).png" class="w-8 h-8  rounded-full"/>
-<p class="ml-2">{{title}} by {{author}} at {{created}}</p>
+<div class="blog-comment">
+  <div class="blog-comment-header">
+    <img src="assets/images/bird-logo.png" class="blog-comment-logo"/>
+    <p class="blog-comment-details">{{title}} by <span class="author">{{author}}</span> at {{created}}</p>
   </div>
-  <p>{{body}}
-  </p>
-  <img src="assets/images/like.png" class="h-4 w-4 mt-4"/><h6>5</h6>
+  <p class="blog-comment-body">{{body}}</p>
+  <div class="blog-comment-footer">
+    <img src="assets/images/like.png" class="blog-comment-like"/>
+    <h6 class="blog-comment-like-count">5</h6>
+  </div>
 </div>
