--- a/blog/src/app/components/login/login.component.html
+++ b/blog/src/app/components/login/login.component.html
@@ -1,46 +1,20 @@
-<div
-  class="bg-black w-1/5 text-white h-1/2 rounded-md"
-  style="
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  "
->
-  <p class="text-3xl mt-4 font-semibold">Login</p>
-  <form (ngSubmit)="loginSubmit(loginForm)" #loginForm="ngForm" style="text-align:left" class="m-4 text-xl">
-
-    <label >Name</label>
-    <div>
-    <input class="m-3 p-1 rounded-md bg-slate-400" name="username" required type="text" ngModel/></div>
-    <label>Password</label>
-    <div>
-    <input class="m-3 p-1 rounded-md bg-slate-400" name="password" required type="password" ngModel/>
-  </div>
-  <div>
-  <button class="bg-green-500 w-1/4 rounded-lg p-2 ml-24 mt-4" type="submit">Enter</button>
+<div class="login-container">
+  <p class="login-title">Login</p>
+  <form (ngSubmit)="loginSubmit(loginForm)" #loginForm="ngForm" class="login-form">
+    <label class="form-label">Name</label>
+    <div class="form-input-container">
+    <input class="form-input" name="username" required type="text" ngModel/></div>
+    <label class="form-label">Password</label>
+    <div class="form-input-container">
+      <input class="form-input" name="password" required type="password" ngModel/>
+    </div>
+    <div class="form-btn-container">
+      <button class="form-btn" type="submit">Enter</button>
+    </div>
+  </form>
 </div>
-</form>
-</div>
-<div
-  class="font-semibold  text-black  rounded-md"
-  style="
-    text-align: center;
-    position: absolute;
-    top: 77%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  "
->Dont have an Account? Sign Up <a href="/signUp">Here</a></div>
-<div
-  class="font-semibold  text-red-700  rounded-md"
-  style="
-    text-align: center;
-    position: absolute;
-    top: 79%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  "
-  *ngIf="loginError.length"
->{{loginError}}</div>
+<div class="signup-link">Don't have an account? Sign Up <a href="/signUp">Here</a></div>
+<div class="login-error"
+    *ngIf="loginError.length"
+  >{{loginError}}
+</div> 
