--- a/blog/src/app/components/navbar/navbar.component.html
+++ b/blog/src/app/components/navbar/navbar.component.html
@@ -1,33 +1,23 @@
-<nav class="bg-gray-800 flex">
-  <div class="w-screen h-fit flex items-start">
-    <div>
-      <img
-        src="assets/images/logo (2).png"
-        class="p-2"
-        width="80"
-        height="80"
-      /><span class="text-lg text-blue-600 font-extrabold">Angry Blogs</span>
-    </div>
-    <div>
-      <button class="bg-black rounded-lg text-white p-8 mt-4 ml-4">Home</button>
-    </div>
-    <div>
-      <button class="bg-black rounded-lg text-white p-8 mt-4 ml-4">
-        Followed
-      </button>
-    </div >
- </div>
-  <div class="items-end mt-8 mr-4 w-fit">
-    <input type="text" class="h-10 w-72 rounded-md " placeholder="Search for Users or Posts" />
+<nav class="navbar">
+  <div class="nav-brand">
+    <a href="#"><img src="assets/images/bird-logo.png" alt="GitHub Logo"></a>
   </div>
-  <div class="items-end mt-4 mr-4">
-    <img class="rounded-full  w-16 h-16 border-2 border-white" src="assets/images/logo (2).png" />
+  <div class="nav-links">
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Followed</a></li>
+    </ul>
   </div>
-
+  <div class="navbar-search-container">
+    <input type="text" class="navbar-search-input" placeholder="Search for Users or Posts" />
+  </div>
+  <button class="nav-toggle">
+    <span class="sandwich-symbol navbar-toggle-icon"><i class="fas fa-bars"></i></span>
+  </button>
 </nav>
-<app-add-post-form />
-<ul>
-<li *ngFor="let item of blogs ">
-  <app-blogs [author]="item.username" [created]="item.created_time" [body]="item.body"/>
-</li>
+<app-add-post-form class="add-post-form"/>
+<ul class="blog-list">
+  <li *ngFor="let item of blogs" class="blog-list-item">
+    <app-blogs [author]="item.username" [created]="item.created_time" [body]="item.body" class="blog-item"/>
+  </li>
 </ul>
