--- a/blog/src/app/components/signup/signup.component.html
+++ b/blog/src/app/components/signup/signup.component.html
@@ -1,49 +1,23 @@
-<div
-  class="bg-slate-800 w-1/5 text-white h-3/5 rounded-md"
-  style="
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  "
->
-  <p class="text-3xl mt-4 font-semibold">Sign Up</p>
-  <form (ngSubmit)="onSignUpSubmit(signUpForm)" #signUpForm="ngForm" style="text-align:left" class="m-4 text-xl">
+<div class="signup-container">
+  <p class="signup-title">Sign Up</p>
+  <form (ngSubmit)="onSignUpSubmit(signUpForm)" #signUpForm="ngForm" class="signup-form">
+    <div class="form-input-container">
+      <label class="form-label">Name</label>
+      <input name="name" class="form-input" type="text" ngModel/>
+    </div>
+    <div class="form-input-container">
+      <label class="form-label">Email</label>
+      <input name="email" class="form-input" type="email" ngModel/>      
+    </div>
+    <div class="form-input-container">
+      <label class="form-label">Password</label>
+      <input name="password" class="form-input" type="password" ngModel/>
+    </div>
+    <div class="form-btn-container">
+      <button  class="form-btn" type="submit">Enter</button>
+    </div>
+  </form>
+</div>
+<div class="login-link">Already have an Account? Log In <a href="/login">Here</a></div>
+<div class="signup-error" *ngIf="registrationError">Invalid Field(s). Please Try Again</div>
 
-    <label >Name</label>
-    <div>
-    <input name="name" class="m-3 p-1 rounded-md bg-slate-400" type="text" ngModel/></div>
-    <label >Email</label>
-    <div>
-    <input name="email" class="m-3 p-1 rounded-md bg-slate-400" type="email" ngModel/></div>
-    <label>Password</label>
-    <div>
-    <input name="password" class="m-3 p-1 rounded-md bg-slate-400" type="password" ngModel/>
-  </div>
-  <div>
-  <button  class="bg-green-500 w-1/4 rounded-lg p-2 ml-24 mt-4" type="submit">Enter</button>
-</div>
-</form>
-</div>
-<div
-  class="font-semibold  text-black  rounded-md"
-  style="
-    text-align: center;
-    position: absolute;
-    top: 82%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  "
->Already have an Account? Log In <a href="/login">Here</a></div>
-<div
-  class="font-semibold  text-red-700  rounded-md"
-  style="
-    text-align: center;
-    position: absolute;
-    top: 84%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  "
-  *ngIf="registrationError"
->Invalid Field(s). Please Try Again</div>
