--- a/blog/src/app/components/navbar/navbar.component.css
+++ b/blog/src/app/components/navbar/navbar.component.css
@@ -7,40 +7,40 @@
     color: #fff;
     font-size: 16px;
   }
-  
+
   .nav-brand img {
     height: 32px;
   }
-  
+
   .nav-links ul {
     display: flex;
     list-style: none;
     margin: 0;
     padding: 0;
   }
-  
+
   .nav-links li {
     margin-right: 10px;
   }
-  
+
   .nav-links a {
     color: #fff;
     text-decoration: none;
     padding: 10px;
   }
-  
+
   .nav-icons {
     display: flex;
     align-items: center;
   }
-  
+
   .btn-icon {
     color: #fff;
     text-decoration: none;
     margin-right: 10px;
     font-size: 18px;
   }
-  
+
   .btn-sandwitch {
     display: none;
     color: #fff;
@@ -48,7 +48,7 @@
     margin-right: 10px;
     font-size: 18px;
   }
-  
+
   .navbar-search-input {
     padding: 5px;
     border: none;
@@ -66,7 +66,7 @@
     .nav-links {
       display: none;
     }
-    
+
     .nav-toggle {
       display: block;
       background: none;
@@ -83,19 +83,31 @@
       background-color: #24292e;
       z-index: 1;
     }
-    
+
     .nav-links.show li {
       margin: 1rem;
     }
   }
-  
+
   @media (min-width: 769px) {
     .nav-toggle {
       display: none;
     }
-    
+
     .nav-links {
       display: flex;
     }
   }
-  
+  footer{
+    position:fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: black;
+    color: beige;
+    text-align: center;
+    font-family: Brush Script Std, cursive;
+  }
+  footer>a{
+    color:aquamarine;
+    font-size: medium;
+  }
