Added a me page

--- a/blog/src/app/components/blogs/blogs.component.html
+++ b/blog/src/app/components/blogs/blogs.component.html
@@ -1,6 +1,6 @@
 <div class="blog-comment">
   <div class="blog-comment-header">
-    <img src="assets/images/bird-logo.png" class="blog-comment-logo"/>
+    <img src="data:image/png;base64,{{profile_picture}}" class="blog-comment-logo"/>
     <p class="blog-comment-details">{{title}} by <span class="author">{{author}}</span> at {{created}}</p>
   </div>
   <p class="blog-comment-body">{{body}}</p>
