Added follower followee implementation

--- a/blog/src/app/components/blogs/blogs.component.html
+++ b/blog/src/app/components/blogs/blogs.component.html
@@ -1,7 +1,7 @@
 <div class="blog-comment">
   <div class="blog-comment-header">
     <img src="data:image/png;base64,{{profile_picture}}" class="blog-comment-logo"/>
-    <p class="blog-comment-details">{{title}} by <span class="author">{{author}}</span> at {{created}}</p>
+    <p class="blog-comment-details">{{title}} by <span class="author"><a href="/users/{{author}}">{{author}}</a></span> at {{created}}</p>
   </div>
   <p class="blog-comment-body">{{body}}</p>
   <div  class="blog-comment-footer">
