--- a/blog/src/app/components/navbar/navbar.component.html
+++ b/blog/src/app/components/navbar/navbar.component.html
@@ -4,8 +4,8 @@
   </div>
   <div class="nav-links">
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Followed</a></li>
+      <li><a (click)="reload()" >Home</a></li>
+      <li><a (click)="follow()" >Followed</a></li>
     </ul>
   </div>
   <div class="navbar-search-container">
