--- a/blog/src/app/components/blogs/blogs.component.css
+++ b/blog/src/app/components/blogs/blogs.component.css
@@ -51,3 +51,13 @@
   cursor:pointer;
 
 }
+.addMessage{
+  display: flex;
+  background-color: white;
+}
+.addMessage>input{
+  border-radius: 10px;
+  border: 2px solid black;
+  padding: 10px;
+  color: chocolate;
+}
