--- a/blog/src/app/components/blogs/blogs.component.html
+++ b/blog/src/app/components/blogs/blogs.component.html
@@ -8,7 +8,23 @@
     <span [ngStyle]="{'color':liked?'red':''}" (click)="like()" class="material-symbols-outlined blog-comment-like">
       thumb_up
       </span>
-    <h6 class="blog-comment-like-count">{{likes}}</h6>
+    <h6 (click)="showLikes()" class="blog-comment-like-count">{{likes}}</h6>
+    <div *ngIf="likesDisplay">
+      <div *ngIf="likes==0" class="nolikes">This Post has no likes</div>
+      <ul>
+        <li *ngFor="let like of likeList">
+          <div class="like-item"><img src="data:image/png;base64,{{like.profile_picture}}"/><h1>{{like.username}}</h1></div>
+        </li>
+      </ul>
+    </div>
   </div>
-  <div class="addMessage"><img src="data:image/png;base64,{{profile_picture}}" class="blog-comment-logo"/><input type="text" maxlength="255" (keyup.enter)="addComment($event)" placeholder="Add a comment"/></div>
+  <div class="addMessage"><img [src]="user" class="blog-comment-logo"/><input type="text" maxlength="255" (keyup.enter)="addComment($event)" placeholder="Add a comment"/></div>
+  <div *ngIf="comments.length>0">
+    <ul>
+    <li *ngFor="let item of comments">
+      <app-comment [created_at]="item.created_at" [message]="item.message" [username]="item.username" [profile_picture]="item.profile_picture"/>
+    </li>
+    </ul>
+    </div>
 </div>
+
