--- a/blog/src/app/components/me/me.component.html
+++ b/blog/src/app/components/me/me.component.html
@@ -40,7 +40,7 @@
     <ul class="blog-list">
 
       <li *ngFor="let item of users.blogs" class="blog-list-item">
-        <app-blogs [author]="users.username" [profile_picture]="users.profile_picture" [title]="item.title" [created]="item.created_time" [body]="item.body" [id]="item.id" [likes]="item.likes" [liked]="item.liked" class="blog-item"/>
+        <app-blogs [author]="users.username" [profile_picture]="users.profile_picture" [title]="item.title" [created]="item.created_time" [body]="item.body" [id]="item.id" [likes]="item.likes" [liked]="item.liked" [comments]="item.comments" class="blog-item"/>
       </li>
     </ul>
   </main>
