--- a/blog/src/app/components/navbar/navbar.component.css
+++ b/blog/src/app/components/navbar/navbar.component.css
@@ -7,9 +7,12 @@
     color: #fff;
     font-size: 16px;
   }
-
+.nav-brand{
+  display: flex;
+}
   .nav-brand img {
-    height: 32px;
+    height: 50px;
+    margin: 10px;
   }
 
   .nav-links ul {
@@ -54,6 +57,7 @@
     border: none;
     border-radius: 5px;
     background-color: #fff;
+    color:black;
     width: 300px;
   }
   .navbar-toggle-icon {
@@ -137,4 +141,34 @@
 }
 a{
   cursor: pointer;
+}
+.profilePicture{
+  height: 3vw;
+  width: 3vw;
+  border-radius: 100%;
+  border: 1px solid black;
+}
+.profilePicture:hover{
+  cursor: pointer;
+}
+.heading{
+  font-size: xx-large;
+  font-family:monospace;
+}
+.no-users{
+  color:red;
+}
+.result{
+  display:flex;
+  border-bottom: 2px solid black;
+  border-radius: 10px;
+  background-color: white;
+  color:black;
+  padding: 10px;
+  font-size: large;
+}
+.result>img{
+  height: 3vw;
+  width:3vw;
+  border-radius: 100%;
 }
