Completed backend implementations

--- a/blog/src/app/components/blogs/blogs.component.html
+++ b/blog/src/app/components/blogs/blogs.component.html
@@ -18,7 +18,12 @@
       </ul>
     </div>
   </div>
-  <div class="addMessage"><img [src]="user" class="blog-comment-logo"/><input type="text" maxlength="255" (keyup.enter)="addComment($event)" placeholder="Add a comment"/></div>
+  <div class="addMessage">
+    <img [src]="user" class="blog-comment-logo"/>
+  <form (ngSubmit)="addComment()">
+    <input type="text" maxlength="255" [(ngModel)]="name" name="name" (keydown.enter)="addComment()" placeholder="Add a comment"/>
+  </form>
+  </div>
   <div *ngIf="comments.length>0">
     <ul>
     <li *ngFor="let item of comments">
