--- a/blog/src/app/components/blogs/blogs.component.css
+++ b/blog/src/app/components/blogs/blogs.component.css
@@ -58,7 +58,7 @@
   display: flex;
   margin:10px;
 }
-.addMessage>input{
+.addMessage input{
   border-radius: 10px;
   border: 2px solid black;
   padding: 10px;
