DEVELOPMENT: Responsive layout design changes

--- a/blog/src/app/components/comments/comment/comment.component.html
+++ b/blog/src/app/components/comments/comment/comment.component.html
@@ -4,4 +4,4 @@
     <p class="blog-comment-details"><a class="author" href="/users/{{username}}">{{username}}</a> at {{created_at}}</p>
   </div>
   <p class="blog-comment-body">{{message}}</p>
-
+</div>
