--- a/blog/src/app/components/login/login.component.html
+++ b/blog/src/app/components/login/login.component.html
@@ -9,7 +9,7 @@
       <input class="form-input" name="password" required type="password" ngModel/>
     </div>
     <div class="form-btn-container">
-      <button class="form-btn" type="submit">Enter</button>
+      <button class="form-btn" type="submit">Login</button>
     </div>
   </form>
 </div>
