--- a/blog/src/app/components/blogs/blogs.component.css
+++ b/blog/src/app/components/blogs/blogs.component.css
@@ -4,7 +4,8 @@
     border-radius: 10px;
     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    margin:5px 20% 20px 20%;
+    width: 100%;
+    margin: 10px auto;
 }
 
 .blog-comment-header {
@@ -22,14 +23,14 @@
     border-radius: 50%;
     margin-right: 10px;
 }
-
-.blog-comment-details {
-    font-size: 16px;
+.blog-comment-header h1
+{
+    font-size: 20px;
     font-weight: bold;
 }
 
 .blog-comment-body {
-    font-size: 14px;
+    font-size: 17px;
     line-height: 1.5;
     margin-bottom: 10px;
 }
@@ -54,21 +55,6 @@
   cursor:pointer;
 
 }
-.addMessage{
-  display: flex;
-  margin:10px;
-}
-.addMessage input{
-  border-radius: 10px;
-  border: 2px solid black;
-  padding: 10px;
-  color: chocolate;
-  width: 80%;
-}
-.addMessage>img{
-  border-radius: 100%;
-  border: 1px solid black;
-}
 .noLikes{
   color:red;
 }
@@ -83,4 +69,46 @@
   border-radius: 100%;
   height: 3vw;
   width: 3vw;
+}
+
+.addMessage {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.blog-comment-logo {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+form {
+  width: 100%;
+}
+
+input[type="text"] {
+  width: 40%;
+  color: black;
+  padding: 10px;
+  border: none;
+  border-radius: 5%;
+  border-bottom: 1px solid #ccc;
+  outline: none;
+  font-size: 16px;
+}
+.blog-comment-list-msg
+{
+  background-color: white;
+  margin-top: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  background-color: #222;
+}
+
+@media (min-width: 768px) {
+  .blog-comment {
+    width: 70%;
+  }
 }
