--- a/blog/src/app/components/signup/signup.component.html
+++ b/blog/src/app/components/signup/signup.component.html
@@ -14,7 +14,7 @@
       <input name="password" class="form-input" type="password" ngModel/>
     </div>
     <div class="form-btn-container">
-      <button  class="form-btn" type="submit">Enter</button>
+      <button  class="form-btn" type="submit">Sign Up</button>
     </div>
   </form>
 </div>
