--- a/blog/src/app/components/profile/profile/profile.component.css
+++ b/blog/src/app/components/profile/profile/profile.component.css
@@ -3,13 +3,16 @@
 }
 .flex-container{
   display: flex;
-  justify-content: space-around;
+  flex-wrap: wrap;
 }
 .Sidebar{
-  width:30%;
-  float:left;
-  border:2px solid red;
+  flex: 1 1 300px;
   text-align: center;
+  background-color: rgba(241, 232, 232, 0.8);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  margin-right: 20px;
+  margin-bottom: 50px;
 }
 .back-button{
   margin:2vw;
@@ -18,17 +21,17 @@
   display: inline-block;
 }
 main{
-  width:50%;
-  float:right;
-  border:2px solid blue;
-
+  flex: 1 1 600px;
+  background-color: rgba(241, 250, 229, 0.8);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 20px
 }
 .profile-picture{
   width:10vw;
   height:10vw;
   border-radius: 100%;
   border:1px solid black;
-  margin:10px;
+  margin:10px auto;
 }
 .profile-picture:hover{
   cursor: pointer;
@@ -65,7 +68,18 @@ button{
   padding:10px;
   border-radius:5px;
 }
-.error{
+.no-blogs-posted
+{
   text-align: center;
-  color:red;
+}
+
+@media (max-width: 768px) {
+  .flex-container {
+    flex-direction: column;
+  }
+
+  .Sidebar, .main {
+    flex-basis: auto;
+    width: auto;
+  }
 }
