--- a/blog/src/app/components/profile/profile/profile.component.html
+++ b/blog/src/app/components/profile/profile/profile.component.html
@@ -11,14 +11,13 @@
       done
       </span></button></div>
     <div *ngIf="!user.followed"><button (click)="follow()" class="follow">Follow</button></div>
-
-
   </aside>
   <main >
     <h1>{{username}}'s Blogs</h1>
-    <div *ngIf="!user.blogs.length" style="color:red;">{{username}} haven't posted a blog yet <span class="material-symbols-outlined">
+    <div *ngIf="!user.blogs.length" style="color:red;" class = "no-blogs-posted">{{username}} haven't posted a blog yet <span class="material-symbols-outlined">
       sentiment_dissatisfied
-      </span> .</div>
+      </span> .
+    </div>
     <ul class="blog-list">
 
       <li *ngFor="let item of user.blogs" class="blog-list-item">
